# uterus

./: .gitignore  .travis.yml  GNUmakefile  Makefile.am  README  README.md  UTE-FILE.txt  configure.ac  git-version-gen  libuterus.pc.in  libuterus.version.in  uterus.magic  uterus.pc.in
aux/: Makefile.am  ute_close.c  ute_close.m  ute_handle.h  ute_nticks.c  ute_nticks.m  ute_open.c  ute_open.m  ute_slut.c  ute_slut.m  ute_tick.c
aux/R/: Makefile.am  uteRus.c
aux/matlab/: Makefile.am  mex.h  ute_close.c  ute_close.m  ute_handle.h  ute_nticks.c  ute_nticks.m  ute_open.c  ute_open.m  ute_slut.c  ute_slut.m  ute_tick.c  ute_tick.m
build-aux/: Makefile.am  git-version-gen
info/: Makefile.am  UTE-FILE.txt  author.h2m  uteapi.texi  uterus.texi
m4/: ax_lib_hdf5.m4  ax_zoneinfo.m4  sxe-compiler.m4  sxe-funs.m4  sxe-libtool.m4  sxe-linker.m4  sxe-matlab.m4  ute-version.m4
src/: Makefile.am  ariva.c  boobs.h  cmd-aux.c  common.ggo.in  darray.c  darray.h  date.h  dukas-clo.ggo  dukas.c  dukas.ggo  dukas.h  dukas.yuck  expobuf.h  fileutils.c  fileutils.h  fmcmb.h  forexfactory.c  fxstreet.c  gbs.c  gbs.h  gesmes.c  hdf5-clo.ggo  hdf5.c  hdf5.yuck  ibhist.c  ibrti.c  intvtree.c  intvtree.h  m30-rela.h  m30.c  m30.h  m62-rela.h  m62.c  m62.h  mat.c  mem.h  mktime.c  module.c  module.h  (+80 more)
test/: Makefile.am  chndl.01.clit  chndl.02.clit  chndl.03.clit  chndl.04.clit  chndl.1.ut  chndl.2.ref.ute  chndl.2.ut  clitoris.am  clitoris.c  clitoris.ggo  core-file-1.c  core-file-2.c  core-file-3.c  core-file-4.c  fsck.01.clit  fsck.02.clit  fsck.03.clit  fsck.04.clit  fsck.05.clit  fsck.06.clit  fsck.07.clit  fsck.08.clit  fsck.09.clit  fsck.1.ut  fsck.10.clit  fsck.10.ut  fsck.11.clit  fsck.11.ut  fsck.12.clit  fsck.12.ut  fsck.13.clit  fsck.13.ut  fsck.14.clit  fsck.14.ut  fsck.15.clit  fsck.15.ut  fsck.16.clit  fsck.16.ut  fsck.17.clit  (+214 more)
